<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.coder.circlebar.CircleBar
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:id="@+id/view"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/view"
        android:layout_alignBottom="@+id/view"
        android:layout_alignStart="@+id/view"
        android:layout_alignEnd="@+id/view">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_step"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:id="@+id/today_count"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/step_count"
            android:textSize="46dp"
            android:textColor="@color/white"
            android:text="1068" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/target_step"
                android:id="@+id/target_step"
                android:textSize="18dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10000"
                android:id="@+id/target_step_count"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/view"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newest_update"
            android:textSize="18dp"
            android:textColor="@color/font_green"
            android:id="@+id/newest_update" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="刚刚"
            android:textSize="18dp"
            android:textColor="@color/font_green"
            android:id="@+id/update_time" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tips1"
            android:text="@string/distance_tips1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.68"
            android:id="@+id/travel_distance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_tips2"
            android:id="@+id/tips2" />
    </LinearLayout>

    <org.eazegraph.lib.charts.BarChart
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout2"
        app:egFixedBarWidth="true"
        app:egBarWidth="10dp" />

</RelativeLayout>